# Operating-Systems-Project

./: README.md
Project 1/xv6-public/: Makefile  _cat  _echo  _forktest  _grep  _init  _kill  _ln  _ls  _mkdir  _ps  _rm  _sh  _shmtest  _stressfs  _testdescribe  _usertests  _wc  _zombie  bootblock.asm  bootmain.c  cat.asm  cat.sym  defs.h  echo.asm  echo.sym  forktest.asm  fs.img  grep.asm  grep.sym  halt.S  halt.c  init.asm  init.c  init.sym  initcode.out  io.h  ioapic.c  kernel  kernel.asm  (+44 more)
Project 2/include/: CMakeLists.txt  commands.c  commands.h
Project 2/src/: CMakeLists.txt  main.c
